Add css and javascript

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
       <div class="header__search">
         <select class="header__filter" name="status" id="status">
-          <option value="not-completed" selected>Dead</option>
-          <option value="completed">Alive</option>
-          <option value="completed">Unknown</option>
-          <option value="all">All</option>
+          <option selected>All</option>
+          <option>Alive</option>
+          <option>Dead</option>
+          <option>Unknown</option>
         </select>
         <input
           type="search"
